2007-07-13  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/devel.html: Correct devel info to
	use SVN, instead of CVS. Finally...

2007-07-04  Pedro Castro <mail pedrocastro.org>

	* www.gnome.org/projects/index.html:
	Added an entry for the Gnome Subtitles project.

2007-07-02  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/evolution/arch.shtml: Fix typo.
	Fixes bug #453175.

2007-06-24  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/index.html: updated GNOME Journal June Edition
	announcement in latest news.

2007-06-14  Richard Hughes  <richard@hughsie.com>

	* www.gnome.org/projects/gnome-power-manager/bugs.html:
	* www.gnome.org/projects/gnome-power-manager/gpm.html:
	* www.gnome.org/projects/gnome-power-manager/gpp.html:
	* www.gnome.org/projects/gnome-power-manager/hal.html:
	* www.gnome.org/projects/gnome-power-manager/index.html:
	* www.gnome.org/projects/gnome-power-manager/packages.html:
	Update the FAQ link to point to the wiki page.

2007-06-14  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/press/releases/index.wml:
	* www.gnome.org/press/releases/igaliajoins.wml:
	* www.gnome.org/press/releases/Makefile.am: add press release about
	Igalia joining the Advisory Board

2007-06-04  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/evolution/download.shtml: Fix latest
	Evolution stable versions.

2007-04-26  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/index.html: Downloads / versions
	updated for 2.19.x.

2007-04-19  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Add GMAE to news, and remove Google SoC.

2007-04-19  Elijah Newren  <newren gmail com>

	* www.gnome.org/start/index.wml:
	Update to mention GNOME 2.18 and 2.19 instead of 2.16 and 2.17

2007-04-19  Elijah Newren  <newren gmail com>

	* www.gnome.org/htaccess:
	redirect /start/unstable to the TwoPointNineteen wiki page
