@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<title>GNOME: The Free Software Desktop Project</title>
 	<link rel="stylesheet" type="text/css" href="/default.css" />
@@ -8,16 +8,23 @@
 	<link rel="icon" type="image/png" href="/img/logo/foot-16.png" />
 	<meta name="description" content="The GNOME Project" />
 	<script type="text/javascript">
-function setActiveStyleSheet(title) {
-  var i, a, main;
-  for(i=0; (a = document.getElementsByTagName("link")[i]); i++) {
-    if(a.getAttribute("rel").indexOf("style") != -1 && a.getAttribute("title")) {
-      a.disabled = true;
-      if(a.getAttribute("title") == title) a.disabled = false;
+    //<![CDATA[
+    function setActiveStyleSheet(title) {
+        var i, a, main;
+        for(i=0; (a = document.getElementsByTagName("link")[i]); i++) {
+            if(a.getAttribute("rel").indexOf("style") != -1 && a.getAttribute("title")) {
+                a.disabled = true;
+                if(a.getAttribute("title") == title) a.disabled = false;
+            }
+        }
     }
-  }
-}
-	</script>
+    //]]>
+    </script>
+
+    <style type="text/css">
+      .gmae-web-teaser { padding: 5px; border: 5px solid #ffffff; }
+      .gmae-web-teaser:hover { border: 5px dashed #dddddd; }
+    </style>
 </head>
 <body>
 
@@ -25,11 +32,6 @@ function setActiveStyleSheet(title) {
 
 <div id="top">
 
-
-<style type="text/css">
-.gmae-web-teaser { padding: 5px; border: 5px solid #ffffff; }
-.gmae-web-teaser:hover { border: 5px dashed #dddddd; }
-</style>
 <a href="http://www.guadec.org"><img src="img/flash/guadec2007-splash.png" title="Register for guadec now!" alt="Meet, plan, party!" width="700" height="324"/></a>
 
 
@@ -47,7 +49,7 @@ function setActiveStyleSheet(title) {
 <p>The latest issue of the GNOME Journal has just been published. GNOME Journal
 is an online magazine devoted to everything surrounding the GNOME Desktop.</p>
 
-<h3><a href="http://www.gnome.org/mobile/">The GNOME Mobile & Embedded Initative</a></h3>
+<h3><a href="http://www.gnome.org/mobile/">The GNOME Mobile &amp; Embedded Initative</a></h3>
 <p>The GNOME Foundation has announced the creation of the GNOME Mobile &amp; Embedded
 Initiative (GMAE), and a software platform for user experience development
 across a wide range of device profiles. The GNOME Mobile &amp; Embedded Initiative
@@ -71,7 +73,7 @@ detailed <a href="http://www.gnome.org/start/2.18/notes/C/">release notes</a>.</
 <i>July 15-21, 2007; Birmingham, UK</i>
 <p>At the annual European GNOME Conference, GNOME hackers from all across the
 globe will gather and show off new cool technologies, party and discuss the
-future direction of the project.
+future direction of the project.</p>
 <p>Keynote speakers include Ubuntu Community manager Jono Bacon, kernel hacker
 Robert Love, Alex Graveley of Tomboy and Gimmie fame and Nokia embedded rockstar
 Ari Jaaksi!</p>
