@@ -1,3 +1,9 @@
+2007-07-25  Ricky Zhou <ricky.zhou@gmail.com>
+
+	* www.gnome.org/index.html: Fixed validation problems (#162389, #407925)
+	* www.gnome.org/projects/rhythmbox/Makefile.am: Remove reference to
+	nonexistent faq.xml.
+
 2007-07-13  Karsten Bräckelmann  <guenther@rudersport.de>
 
 	* www.gnome.org/projects/garnome/devel.html: Correct devel info to
